# latent-assets

./: README.md  pyproject.toml
experiments/inference_api/: fastapi_server.py  inference.py  jina_clip_similarity.py  pyproject.toml
experiments/qdrant_store/: create_vector_store.py  download_cifar100.py  inference.py  pyproject.toml
latent-assets/backend/: config.py  config.yaml  embedding.py  main.py  pyproject.toml  schemas.py  vector_store.py
latent-assets/frontend/: index.html
latent-assets/frontend/src/: App.tsx  api.ts  index.css
